04-tilt/basic/music-service/config/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-service
  labels:
    app: music-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: music-service
  template:
    metadata:
      labels:
        app: music-service
    spec:
      containers:
        - name: music-service
          image: music-service
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 8181
          resources:
            requests:
              cpu: "0.2"
              memory: "756Mi"
            limits:
              cpu: "2"
              memory: "756Mi"
